# Anomaly-AI

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  requirements.txt  vercel.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  landing-ci.yml  release.yml  security.yml
api/: __init__.py  index.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml-deep.txt  requirements.txt
backend/configs/: app.yaml  network_anomaly.yaml  waf_payload.yaml
backend/data/: README.md
backend/data/samples/: sample_network_flows.csv  sample_payloads.csv  sample_payloads.json
backend/migrations/: env.py
backend/migrations/versions/: 20260516_0001_initial_schema.py
backend/models/: README.md  network_anomaly_model.joblib  waf_payload_model.joblib
backend/reports/: network_anomaly_report.md  waf_payload_report.md
backend/src/anomaly_ai/: __init__.py
backend/src/anomaly_ai/api/: dependencies.py  lifespan.py  main.py  middleware.py  routes_health.py  routes_info.py  routes_models.py  routes_network.py  routes_reports.py  routes_waf.py
backend/src/anomaly_ai/api/middleware/: __init__.py  audit.py  errors.py  rate_limit.py
backend/src/anomaly_ai/api/routers/: __init__.py  alerts.py  audit.py  auth.py  drift.py  integrations.py  models_registry.py  users.py
backend/src/anomaly_ai/auth/: __init__.py  api_keys.py  dependencies.py  jwt.py  password.py  rbac.py  service.py
backend/src/anomaly_ai/cli/: __init__.py  main.py
backend/src/anomaly_ai/common/: config.py  constants.py  exceptions.py  logging_config.py  paths.py  security.py
backend/src/anomaly_ai/db/: __init__.py  base.py  models.py  session.py
backend/src/anomaly_ai/integrations/: __init__.py  alert_manager.py  siem.py  threat_intel.py
backend/src/anomaly_ai/ml/: __init__.py  calibration.py  drift.py  explain.py  registry.py
backend/src/anomaly_ai/network_anomaly/: __init__.py  evaluate.py  features.py  isolation_forest.py  pipeline.py  predict.py  prepare_data.py  service.py  train.py
backend/src/anomaly_ai/observability/: __init__.py  logging.py  metrics.py  request_id.py
backend/src/anomaly_ai/schemas/: admin.py  auth.py  common.py  drift.py  network.py  reports.py  waf.py
backend/src/anomaly_ai/services/: artifact_loader.py  model_registry.py  prediction_history.py  report_service.py
backend/src/anomaly_ai/waf_payload/: __init__.py  evaluate.py  features.py  pipeline.py  predict.py  prepare_data.py  rules.py  service.py  train.py
backend/tests/: conftest.py  test_alert_manager.py  test_api_keys.py  test_auth_jwt.py  test_auth_password.py  test_drift.py  test_health_api.py  test_info_api.py  test_isolation_forest.py  test_model_artifacts.py  test_network_api.py  test_network_predict.py  test_network_preprocess.py  test_registry.py  test_siem.py  test_waf_api.py  test_waf_predict.py
deploy/grafana/provisioning/dashboards/: anomaly-ai.json  dashboard.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  AUTH.md  DATASETS.md  DEPLOYMENT.md  DRIFT.md  INTEGRATION.md  MEGA_PLAN.md  MODEL_CARD.md  MONITORING.md  ROADMAP.md  architecture-diagram.mmd  architecture-overview.mmd  mermaid-config.json
docs/diagrams/: README.md  architecture-full.mmd  architecture-layers.mmd  architecture-overview.mmd  data-model.mmd  mega-plan-stack.mmd  mermaid-config.json  predict-flow.mmd
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/api/: authApi.ts  client.ts  endpoints.ts  networkApi.ts  reportsApi.ts  wafApi.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  tokenStore.ts
frontend/src/components/dashboard/: ModuleStatus.tsx  RecentPredictions.tsx  StatCard.tsx  ThreatSummary.tsx
frontend/src/components/layout/: AppLayout.tsx  Footer.tsx  Header.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/network/: NetworkFileUpload.tsx  (+2 more)
frontend/src/hooks/: useAlertsStream.ts  useHealth.ts  useNetworkPrediction.ts  useReports.ts  useTheme.ts  useWafPrediction.ts
frontend/src/pages/: AdminAuditPage.tsx  AlertsPage.tsx  DashboardPage.tsx  DocumentationPage.tsx  LoginPage.tsx  NetworkAnalyzerPage.tsx  NotFoundPage.tsx  ReportsPage.tsx  WafAnalyzerPage.tsx
frontend/src/styles/: theme.css
frontend/src/types/: common.ts  network.ts  reports.ts  waf.ts
frontend/src/utils/: constants.ts  demoFallback.ts  demoMode.ts  formatters.ts  validators.ts
landing/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  index.css
landing/src/components/: Bento.tsx  CTA.tsx  DocsSection.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LayoutBg.tsx  MetricsStrip.tsx  Modules.tsx  Nav.tsx  Trust.tsx
landing/src/docs/: DocsLayout.tsx  nav.ts
landing/src/lib/: links.ts  motion.ts
landing/src/pages/: LandingPage.tsx
legacy/: README.md
scripts/: render-diagrams.mjs  vercel-build.mjs
(+28 files in other folders)
