[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-ai-backend"
version = "2.0.0"
description = "Anomaly AI v2 — FastAPI backend для ML-обнаружения сетевых и веб-аномалий"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nodir Odilov" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/NodirOdilov/Anomaly-AI"
Repository = "https://github.com/NodirOdilov/Anomaly-AI"
Issues = "https://github.com/NodirOdilov/Anomaly-AI/issues"

[tool.setuptools.packages.find]
where = ["src"]

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: интеграционные тесты (требуют БД)",
    "slow: медленные тесты (обучение моделей)",
]

# === Ruff (линтер + автоформат) ===
[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "F", "W",        # стандартный pyflakes/pycodestyle
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "S",                  # bandit (часть)
    "RUF",                # ruff specific
    "ASYNC",              # async-проверки
    "SIM",                # упрощения
    "PT",                 # pytest
]
ignore = [
    "S101",   # assert разрешён в тестах
    "S104",   # 0.0.0.0 разрешён (контейнер)
    "B008",   # FastAPI Depends() в дефолтах
    "RUF001", # кириллица в строках (сообщения API на русском)
    "RUF002", # кириллица в docstring (русскоязычный проект)
    "RUF003", # кириллица в комментариях (русскоязычный проект)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT"]
"src/anomaly_ai/api/main.py" = ["E402"]
"src/anomaly_ai/api/routers/**" = ["PT028"]
"src/anomaly_ai/schemas/auth.py" = ["S105"]
"src/anomaly_ai/api/middleware/audit.py" = ["RUF006"]
"src/anomaly_ai/integrations/alert_manager.py" = ["RUF006"]

# === Mypy ===
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations/"]

# === Bandit ===
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B104"]

# === Coverage ===
[tool.coverage.run]
source = ["src/anomaly_ai"]
omit = ["*/migrations/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
